--- a/Lecture-Evaluation/build.gradle
+++ b/Lecture-Evaluation/build.gradle
@@ -43,6 +43,9 @@ dependencies {
 // https://mvnrepository.com/artifact/mysql/mysql-connector-java
 	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.20'
 	 compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
+	 // https://mvnrepository.com/artifact/org.mybatis/mybatis
+compile group: 'org.mybatis', name: 'mybatis', version: '3.5.5'
+	 
 
     
 }
