--- a/Lecture-Evaluation/build.gradle
+++ b/Lecture-Evaluation/build.gradle
@@ -72,7 +72,8 @@ compile group: 'org.mybatis', name: 'mybatis', version: '3.5.5'
   implementation 'org.springframework:spring-webmvc:5.2.5.RELEASE'
     // Spring JDBC 관련 라이브러리
   implementation 'org.springframework:spring-jdbc:5.2.5.RELEASE'
-	 
+	  // JSON 형식의 문자열을 다루는 라이브러리
+  implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
  // Mybatis를 Spring IoC와 연결하는 어댑터 라이브러리
   implementation 'org.mybatis:mybatis-spring:2.0.4'
  // Apache HttpComponents 라이브러리
