--- a/Lecture-Evaluation/build.gradle
+++ b/Lecture-Evaluation/build.gradle
@@ -58,6 +58,10 @@ dependencies {
   compile group: 'javax.mail', name: 'javax.mail-api', version: '1.6.0'
   
   implementation 'org.apache.commons:commons-email:1.5'
+  // https://mvnrepository.com/artifact/org.imgscalr/imgscalr-lib
+compile group: 'org.imgscalr', name: 'imgscalr-lib', version: '4.2'
+  // https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload
+compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.2'
   
   implementation 'javax.mail:mailapi:1.4.3'
 // https://mvnrepository.com/artifact/mysql/mysql-connector-java
